crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__const_const_with_expression.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: const COMPUTED = 2 * 3 + 1;
result: [
    Const(
        Spanned(
            ConstDef {
                name: Spanned(
                    "COMPUTED",
                    6..14,
                ),
                value: Spanned(
                    BinaryOp {
                        op: Add,
                        left: Spanned(
                            BinaryOp {
                                op: Mul,
                                left: Spanned(
                                    Literal(
                                        2,
                                    ),
                                    17..18,
                                ),
                                right: Spanned(
                                    Literal(
                                        3,
                                    ),
                                    21..22,
                                ),
                            },
                            17..18,
                        ),
                        right: Spanned(
                            Literal(
                                1,
                            ),
                            25..26,
                        ),
                    },
                    17..18,
                ),
            },
            0..27,
        ),
    ),
]
