crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__const_toplevel_const.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: const MAX_SIZE = 100;
result: [
    Const(
        ConstDef {
            name: "MAX_SIZE",
            value: Literal(
                100,
            ),
        },
    ),
]
