crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__empty_import_path_diagnostic.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entries
---
code: from import item
result: [02] Error: found 'import' expected identifier
   ╭─[ empty_import_path:1:6 ]
   │
 1 │ from import item
   │      ───┬──  
   │         ╰──── found 'import' expected identifier
───╯
