crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__expression_array_index.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { arr[0]; }
result: [
    Function(
        FunctionDef {
            name: "test",
            params: [],
            return_type: None,
            body: [
                Expression(
                    IndexAccess {
                        array: Identifier(
                            "arr",
                        ),
                        index: Literal(
                            0,
                        ),
                    },
                ),
            ],
        },
    ),
]
