crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__expression_call_with_args.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { add(a, b, c); }
result: [
    Function(
        FunctionDef {
            name: "test",
            params: [],
            return_type: None,
            body: [
                Expression(
                    FunctionCall {
                        callee: Identifier(
                            "add",
                        ),
                        args: [
                            Identifier(
                                "a",
                            ),
                            Identifier(
                                "b",
                            ),
                            Identifier(
                                "c",
                            ),
                        ],
                    },
                ),
            ],
        },
    ),
]
