crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__expression_chained_calls.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { obj.method().another(); }
result: [
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                FunctionCall {
                                    callee: Spanned(
                                        MemberAccess {
                                            object: Spanned(
                                                FunctionCall {
                                                    callee: Spanned(
                                                        MemberAccess {
                                                            object: Spanned(
                                                                Identifier(
                                                                    Spanned(
                                                                        "obj",
                                                                        14..17,
                                                                    ),
                                                                ),
                                                                14..17,
                                                            ),
                                                            field: Spanned(
                                                                "method",
                                                                18..24,
                                                            ),
                                                        },
                                                        14..24,
                                                    ),
                                                    args: [],
                                                },
                                                14..26,
                                            ),
                                            field: Spanned(
                                                "another",
                                                27..34,
                                            ),
                                        },
                                        14..34,
                                    ),
                                    args: [],
                                },
                                14..36,
                            ),
                        ),
                        14..37,
                    ),
                ],
            },
            0..39,
        ),
    ),
]
