crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__expression_empty_struct.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { Unit {}; }
result: [
    Function(
        FunctionDef {
            name: "test",
            params: [],
            return_type: None,
            body: [
                Expression(
                    StructLiteral {
                        name: "Unit",
                        fields: [],
                    },
                ),
            ],
        },
    ),
]
